# rh2

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
python/rh2/: __init__.py
src/: lib.rs
tests/: test_roundtrip.py
