[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "rh2"
version = "0.0.1"
description = "Rust-backed sans-IO HTTP/2 codec for Python, wrapping the h2 crate"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rh2._rh2"
